--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 }
 
 body {
-  padding: 0 10px;
+
   background-color: var(--cor-clara);
 }
 
@@ -80,6 +80,7 @@ a:hover {
 }
 
 main {
+  padding: 0 10px;
   padding-top: 7em;
   background-color: var(--cor-clara);
 }
@@ -211,7 +212,7 @@ h3:hover {
   text-indent: 20px;
 }
 
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 999px) {
   .projetos-grid {
     display: flex;
     gap: 10px;
@@ -224,4 +225,75 @@ h3:hover {
   .projetos img {
     border: 2px solid var(--cor-secundaria);
   }
+}
+
+
+
+::placeholder {
+    font-size: 10px;
+}
+
+input:focus , textarea:focus {
+  outline: none;
+}
+
+.contato h2 {
+    text-align: center;
+  font-size: 35px;
+  margin-top: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.contato form {
+  max-width: 400px;
+  margin: auto;
+}
+
+.contato form p {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+.contato label {
+  margin-bottom: 5px;
+}
+
+
+.contato input,
+.contato textarea {
+  width: 100%;
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid #999;
+}
+
+button {
+  color: white; 
+  background-color: rgba(128, 128, 128, 0.534);
+  padding: 4px;
+  font-size: 10px;
+  border-radius: 6px;
+ 
+}
+
+.botao {
+  display: block;
+  text-align: center;
+}
+
+.redes  {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px 0;
+  
+}
+
+
+footer {
+  color: var(--texto-branco);
+  text-align: center;
+  background-color: var(--cor-secundaria);
+  width: 100%;
 }
